<resources>
    <string name="app_name">Tru2Specs</string>
    <string name="action_settings">Settings</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_sign_in_option_msg">Sign in using social network</string>
    <string name="login_sign_in_option_msg_or">OR</string>
    <string name="login_fb">{fa-facebook}</string>
    <string name="login_gplus">{fa-google-plus}</string>
    <string name="login_not_a_member_sign_up">Sign Up</string>
    <string name="login_not_a_member_sign_in">Sign In</string>
    <string name="signup_firstname">Full Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_re_password">Retype Password</string>
    <string name="signup_dob">Date of Birth</string>
    <string name="signup_calendar">{fa-calendar}</string>
    <string name="signup_select_gender">select your gender</string>
    <string name="signup_agree_terms">i agree the terms of use</string>
    <string name="signup_sign_up">sign up</string>
    <string name="signup_already_a_member_sign_in">Sign In</string>
    <string name="reset_password_text">Enter your registered email id and we will email you a link to reset your password.</string>
    <string name="reset_password_btn_text">Reset Password</string>
    <string name="dummy_amount">\u20B9120</string>
    <string name="rupees">\u20B9</string>
    <string name="address_save_and_continue">Save and continue</string>
    <string name="address_select_from_saved">Saved addresses</string>
    <string name="adress_address_line_1">Address Line 1</string>
    <string name="adress_address_line_2">Address Line 2</string>
    <string name="address_city">City</string>
    <string name="address_state">State</string>
    <string name="address_zip_code">Zip Code</string>
    <string name="address_country">Country</string>
    <string name="complete_thank_you">Thank you</string>
    <string name="complete_msg">We\'ve sent you an email with all the details of your order. You can track your shipment with the order id below.</string>
    <string name="complete_back_to_shop">Back to shop</string>
    <string name="no_items_in_bag">You have no items in your shopping bag.</string>
    <string name="no_item_shop_now">Continue shopping</string>
    <string name="order_id">order id</string>
    <string name="order_amount">Amount</string>
    <string name="order_items">Items</string>
    <string name="order_placed_on">Placed on Thursday</string>
    <string name="order_in_progress">In progess</string>
    <string name="order_view_details">View detail</string>
    <string name="signup_email">Email</string>
    <string name="signup_phone">Contact No</string>
    <string name="signup_referral">Referral Code (Optional)</string>
    <string name="basic_info_contact_no">Contact Number</string>
    <string name="basic_info_continue">Continue</string>
    <string name="basic_info_full_name">Full Name</string>
    <string name="login_google_plus">Login with Google+</string>
    <string name="login_facebook">login with facebook</string>
    <string name="login_not_a_member">Not a member?</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="near_by_stores">Nearby stores</string>
    <string name="title_store">Stores</string>
    <string name="title_home">HOME</string>
    <string name="facebook_app_id">1387032194715155</string>
    <string name="fb_login_protocol_scheme">fb1387032194715155</string>
    <string name="filter_sort">sort</string>
    <string name="filter">filter</string>
    <string name="dashboard_my_account">My Account</string>
    <string name="dashboard_my_orders">My Orders</string>
    <string name="google_client_id">857287145083-2tl4c9tq347m2r7vt6qjk5lmt4fq020q.apps.googleusercontent.com</string>
    <string name="dashboard_serviecs_store_locator">Store\nLocator</string>
    <string name="dashboard_serviecs_home_checkup">Home eye\ncheckup</string>
    <string name="dashboard_serviecs_try_at_home">Try at home\nfor free</string>
    <string name="action_search">Search</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_cart">Cart</string>
    <string name="action_account">Account</string>
    <string name="login_already_a_member">Already a member?</string>
    <string name="action_home">Home</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_sign_up">Sign up</string>
    <string name="profile_update">Update</string>
    <string name="profile_add_new_address">Add a new address</string>
    <string name="title_my_accout">My Account</string>
    <string name="title_add_address">Add Address</string>
    <string name="address_lankdmark">Landmark</string>
    <string name="address_mobile">Mobile Number</string>
    <string name="address_alt_mobile">Alternate Mobile Number</string>
    <string name="adress_default">Make this my default address</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="title_cart">Shopping Bag</string>
    <string name="cart_checkout">Proceed to checkout</string>
    <string name="title_price_details">price details</string>
    <string name="title_price">Price (2 items)</string>
    <string name="title_delivery">Delivery</string>
    <string name="title_amount_payable">Amount Payable</string>
    <string name="title_checkout">Delivery</string>
    <string name="title_product_details">PRODUCT NAME &amp; CODE</string>
    <string name="checkout_address">Address</string>
    <string name="text_save_and_continue">Save and continue</string>
    <string name="checkout_card_details">Card details</string>
    <string name="checkout_pay_now">pay now</string>
    <string name="checkout_enter_card_detail_msg">Enter your debit and credit card details</string>
    <string name="checkout_card_no">Card No</string>
    <string name="checkout_expiry">Expiry</string>
    <string name="checkout_card_cvv">CVV Code</string>
    <string name="find_a_store">Find a store</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="lbl_price">Price</string>
    <string name="remove_item">Remove</string>
    <string name="shortlist">shortlist</string>
    <string name="use_for">You use Eyeglasses for:</string>
    <string name="poid">poid</string>
    <string name="select_section">Select Section</string>
    <string name="title_favorite">Shortlisted</string>
    <string name="no_items_shortlisted">You have not shortlisted any items.</string>
    <string name="share">Share</string>
    <string name="select_lens">Select lens</string>
    <string name="bullet">•</string>
    <string name="faqs">Faq</string>
    <string name="reset_all">Reset All</string>
    <string name="apply_filter">Apply filters</string>
</resources>