<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:elevation="@dimen/cardview_default_elevation"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shaded_bg"
        android:orientation="vertical"
        android:padding="@dimen/outer_body_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/outer_body_padding"
                android:paddingBottom="@dimen/outer_body_padding"
               >

                <TextView
                    style="@style/SmallTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id"
                    android:textStyle="bold" />

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="C5678hXC"
                    android:gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"

                android:paddingTop="@dimen/outer_body_padding"
                android:paddingBottom="@dimen/outer_body_padding"
>

                <TextView
                    style="@style/SmallTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_amount"
                    android:textStyle="bold" />

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$300"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"

                android:paddingTop="@dimen/outer_body_padding"
                android:paddingBottom="@dimen/outer_body_padding">

                <TextView
                    style="@style/SmallTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_items"
                    android:textStyle="bold" />

                <TextView
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/white"
            android:layout_gravity="center"
            android:orientation="vertical"
            >

            <TextView
                style="@style/SmallTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_placed_on"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />

            <TextView
                style="@style/MediumTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="February 02, 2017 at 09:02 am"
                android:gravity="center"
                android:textStyle="bold"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/outer_body_padding">
        <TextView
            style="@style/SmallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_in_progress"
            android:layout_centerVertical="true"
            android:gravity="center"

            android:drawableLeft="@drawable/ic_cached_black_24dp"
            android:drawablePadding="@dimen/drawable_padding"

            />
        <Button
            style="@style/DarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_view_details"
            android:paddingLeft="@dimen/button_padding_left"
            android:paddingRight="@dimen/button_padding_right"

            android:layout_alignParentRight="true"/>

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>